[package]
name = "cags"
version = "0.1.0"
authors = ["Alexandre Duc <alexandre.aduc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2.6"
regex = "1"
zxcvbn = "2"
log = "0.4.14"
log4rs = "1.0.0"
casbin = "2.0.7"
uuid = "0.8"
strum = "0.15.0"
strum_macros = "0.15.0"
